# p50x-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: audit.yml  build.yml  deploy.yml  rust.yml
examples/: example.rs
src/: device.rs  error.rs  lib.rs  main.rs  protocol.rs  reply.rs
src/cli/: mod.rs  power.rs  utils.rs
src/lib/: device.rs  error.rs  lib.rs  protocol.rs  reply.rs  utils.rs
